--- a/css/app.css
+++ b/css/app.css
@@ -3,10 +3,15 @@
     text-align: center;
 }
 
+body {
+    background-color: #8ab4f2;
+}
+
 table {
     margin: auto;
-    cursor:cell
+    cursor: cell
 }
+
 
 .smiley {
     display: block;
@@ -20,6 +25,8 @@ table {
     cursor: pointer;
 }
 
+.timer,
+.flag,
 .heart1,
 .heart2,
 .heart3 {
@@ -39,10 +46,28 @@ table {
 
 .modal {
     font-size: 14px;
-    margin:10px;
+    margin: 10px;
     color: gold;
 }
 
+.instruction {
+    color: blue;
+    border: 1px groove navy;
+    border-radius: 10px;
+    margin: 10px;
+    background-image: linear-gradient(rgba(4, 9, 30, 0.3), rgba(4, 9, 30, 0.7));
+}
+
+.instruction:hover {
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2)
+}
+
+.yellow-hr {
+    height: 3px;
+    background-color: #f9ec5d;
+    border: none;
+    margin-block-end: 6px;
+}
 
 /* ----------Buttons---------- */
 
@@ -55,6 +80,7 @@ table {
     cursor: pointer;
     border-radius: 10px;
 }
+
 .easy:hover {
     color: rgb(61, 224, 224);
 }
@@ -67,6 +93,9 @@ table {
     color: red;
 }
 
+.level-buttons button:hover {
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2)
+}
 
 .play {
     position: absolute;
@@ -75,6 +104,15 @@ table {
     border: none;
     cursor: pointer;
 }
+
+.help {
+    position: absolute;
+    right: 75px;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
 /* ----------DARK MODE---------- */
 
 .dark {
@@ -86,10 +124,11 @@ table {
 }
 
 .dark-mode {
-    background-color: #121212;
+    background-color: #181818;
     color: white;
 }
-.dark-mode button{
+
+.dark-mode button {
     background-color: #121212;
     color: white;
 }
@@ -103,7 +142,8 @@ table {
 .footer {
     text-align: center;
     margin-block-start: 30px;
-    font-size: 10px;
+    color: #006666;
+    font-size: 8px;
 }
 
 .footer hr {
